Fix project-tiles' alignment.

--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,21 @@
 
-.project-tile img {
-  width: 150px;
+#tile-container img {
+  width: 400px;
+  
   border: 1px solid red;
 }
 .project-tile {
   border: 1px solid yellow;
+  width:fit-content;
 }
 #tile-container {
   background-color: beige;
   border: 3px solid blue;
-  display: flex;
-  flex-direction: row;
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  row-gap: 1rem;
+  
 }
 hr {
   border:4px solid green;
